force-app/main/default/objects/User/fields/AvaliableNegotiations__c.field-meta.xml
<CustomField>
    <fullName>AvaliableNegotiations__c</fullName>
    <label>Negociações Liberadas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>Todos</label>
            </value>
            <value>
                <fullName>AccountOrder</fullName>
                <label>Conta e Ordem</label>
            </value>
            <value>
                <fullName>BarterSale</fullName>
                <label>Negociação Barter</label>
            </value>
            <value>
                <fullName>ZVTR</fullName>
                <label>Venda Barter</label>
            </value>
            <value>
                <fullName>CurrencySale</fullName>
                <label>Venda moeda</label>
            </value>
            <value>
                <fullName>ZVTF</fullName>
                <label>Venda Triangulada</label>
            </value>
            <value>
                <fullName>ZVTS</fullName>
                <label>Remessa Venda Triangulação</label>
            </value>
            <value>
                <fullName>ExchangeSale</fullName>
                <label>Venda Troca e Permuta</label>
            </value>
            <value>
                <fullName>FutureSale</fullName>
                <label>Venda Futura</label>
            </value>
            <value>
                <fullName>IndustryBonification</fullName>
                <label>Bonificação origem Industria</label>
            </value>
            <value>
                <fullName>Bonification</fullName>
                <label>Bonificação</label>
            </value>
            <value>
                <fullName>ZCCO</fullName>
                <label>Contrato Conta e Ordem</label>
            </value>
            <value>
                <fullName>ZCEF</fullName>
                <label>Contrato Venda Futura</label>
            </value>
            <value>
                <fullName>ZCNO</fullName>
                <label>Contrato Venda Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>