force-app/main/default/objects/User/fields/CheckPhone__c.field-meta.xml
<CustomField>
    <fullName>CheckPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para verificar se o Usuario preencheu ou esta de acordo em informar seu telefone.</description>
    <label>Telefone Verificado?</label>
    <type>Checkbox</type>
</CustomField>