force-app/main/default/objects/User/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Campo referente ao ID do usuário no SAP.</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo referente ao ID do usuário no SAP.</inlineHelpText>
    <label>Código Externo</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>