force-app/main/default/objects/User/fields/LastGeolocationPermissionDate__c.field-meta.xml
<CustomField>
    <fullName>LastGeolocationPermissionDate__c</fullName>
    <label>Última permissão de acesso a localização</label>
    <type>DateTime</type>
</CustomField>