force-app/main/default/objects/User/fields/LastSyncedDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedDate__c</fullName>
    <label>Última data de sincronização</label>
    <type>DateTime</type>
</CustomField>