force-app/main/default/objects/User/fields/TerritoryRole__c.field-meta.xml
<CustomField>
    <fullName>TerritoryRole__c</fullName>
    <formula>TRIM(RIGHT(UserRole.Name,LEN(UserRole.Name) - FIND(&quot;-&quot;, UserRole.Name)  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territorio por Papel</label>
    <type>Text</type>
</CustomField>